--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,5 +1,26 @@
 @()
 
-@main("Welcome to Play") {
-  <h1>Welcome to Play!</h1>
+@main("sample scala room") {
+<div class="jumbotron">
+  <h1>Welcome to your sample scala room running on play!</h1>
+  <p>This is a template for a starter scala/play based room in game-on. Use it as a starting point to create something more unique by building on or modifying it.</p>
+</div>
+
+<p>
+  <button type="button" onclick="roomHello()" class="btn btn-default">Hello</button>
+  <button type="button" onclick="argh()" class="btn btn-primary">Do Undefined</button>
+  <button type="button" onclick="roomGoodbye()" class="btn btn-success">Goodbye</button>
+  <button type="button" onclick="chat()" class="btn btn-info">chat</button>
+  <button type="button" onclick="play()" class="btn btn-warning">Play</button>
+  <button type="button" onclick="gowest()" class="btn btn-danger">Go west</button>
+</p>
+<p>
+  <button type="button" onclick="clearScreen()" class="btn btn-default">Clear Output</button>
+</p>
+<div class="panel panel-info">
+  <div class="panel-heading">
+    <h3 class="panel-title">Web Socket Latest Response</h3>
+  </div>
+  <div id="output" class="panel-body"></div>
+</div>
 }
