--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -10,7 +10,7 @@
   <button type="button" onclick="roomHello()" class="btn btn-default">Hello</button>
   <button type="button" onclick="argh()" class="btn btn-primary">Do Undefined</button>
   <button type="button" onclick="roomGoodbye()" class="btn btn-success">Goodbye</button>
-  <button type="button" onclick="chat()" class="btn btn-info">chat</button>
+  <button type="button" onclick="chat()" class="btn btn-info">Chat</button>
   <button type="button" onclick="play()" class="btn btn-warning">Play</button>
   <button type="button" onclick="gowest()" class="btn btn-danger">Go west</button>
 </p>
