add a connect button to test room, so you can reconnect.

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -10,18 +10,21 @@
 </div>
 <p>
   <div class="row">
-  <div class="col-sm-2 well"><button type="button" onclick="roomHello()" class="btn btn-primary btn-block">Hello</button></div>
-  <div class="col-sm-2 well"><button type="button" onclick="argh()" class="btn btn-primary btn-block">Do Undefined</button></div>
-  <div class="col-sm-2 well"><button type="button" onclick="roomGoodbye()" class="btn btn-primary btn-block">Goodbye</button></div>
-  <div class="col-sm-2 well"><button type="button" onclick="chat()" class="btn btn-primary btn-block">Chat</button></div>
-  <div class="col-sm-2 well"> <button type="button" onclick="play()" class="btn btn-primary btn-block">Play</button></div>
-  <div class="col-sm-2 well"><button type="button" onclick="gowest()" class="btn btn-primary btn-block">Go west</button></div>
+    <div class="col-sm-2 well"><button type="button" onclick="roomHello()" class="btn btn-primary btn-block">Hello</button></div>
+    <div class="col-sm-2 well"><button type="button" onclick="argh()" class="btn btn-primary btn-block">Do Undefined</button></div>
+    <div class="col-sm-2 well"><button type="button" onclick="roomGoodbye()" class="btn btn-primary btn-block">Goodbye</button></div>
+    <div class="col-sm-2 well"><button type="button" onclick="chat()" class="btn btn-primary btn-block">Chat</button></div>
+    <div class="col-sm-2 well"> <button type="button" onclick="play()" class="btn btn-primary btn-block">Play</button></div>
+    <div class="col-sm-2 well"><button type="button" onclick="gowest()" class="btn btn-primary btn-block">Go west</button></div>
   </div>
 </p>
 
 <div class="row">
   <div class="col-sm-6 well">
-    <p><button type="button" onclick="send()" class="btn btn-info">Send to Room!</button></p>
+    <p>
+      <button type="button" onclick="send()" class="btn btn-info">Send to Room!</button>
+      <button type="button" onclick="connect()" class="btn btn-info">Connect to room!</button>
+    </p>
     <div class="panel panel-info">
       <div class="panel-heading">
 	<h3 class="panel-title">Test message for the Room</h3>
