--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -8,6 +8,10 @@
 <div class="page-header">
   <h4>Preformed Messages, try them, edit them, or just write your own</h2>
 </div>
+<div class="form-group">
+  <label for="wsdest">websocket uri:</label>
+  <input type="text" class="form-control" id="wsdest">
+</div>
 <p>
   <div class="row">
     <div class="col-sm-2 well"><button type="button" onclick="roomHello()" class="btn btn-primary btn-block">Hello</button></div>
